# GUI-ReRank

./: Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
gui_rerank/: pyproject.toml
gui_rerank/resources/evaluation/annotation/: goldstandard_llm_general_description_annotations.csv
gui_rerank/resources/evaluation/results/: rerank_results_model_gpt_4_1_image_temp0_05.csv  rerank_results_model_gpt_4_1_mini_image_temp0_05.csv  rerank_results_model_gpt_4_1_mini_text_temp0_05.csv  rerank_results_model_gpt_4_1_nano_image_temp0_05.csv  rerank_results_model_gpt_4_1_nano_text_temp0_05.csv  rerank_results_model_gpt_4_1_text_temp0_05.csv
gui_rerank/resources/prompts/: annotation_batch_prompt.txt  annotation_prompt.txt  llm_rerank_image.txt  llm_rerank_image_decomposed.txt  llm_rerank_text.txt  llm_rerank_text_decomposed.txt  query_decomposition.txt
gui_rerank/src/gui_rerank/annotator/: annotator.py  config.py  llm_annotator.py
gui_rerank/src/gui_rerank/dataset_builder/: dataset_builder.py
gui_rerank/src/gui_rerank/embeddings/: config.py  embeddings.py  lang_chain_embeddings.py  utils.py
gui_rerank/src/gui_rerank/evaluation/: annotation_instance_validation.py  annotation_validation.py  efficiency_analysis.py  goldstandard_annotation.py  run_evaluation_image.py  run_evaluation_text.py
gui_rerank/src/gui_rerank/llm/: config.py
gui_rerank/src/gui_rerank/loader/: data_loader.py
gui_rerank/src/gui_rerank/main/: data_rico_transfer.py  load_rico.py  merge_batches.py
gui_rerank/tests/: test_decomposer.py  test_llm_annotator.py  tests_dataset_builder.py
(+47 files in other folders)
