[project]
name = "gui-rerank"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristian Kolthoff",email = "kristian.kolthoff@tu-clausthal.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "gui_rerank", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
